# NIPS23-OOD

./: CMakeLists.txt
cpp/: search.cpp  test.cpp
faiss/: CMakeLists.txt
faiss/faiss/: CMakeLists.txt
faiss/faiss/impl/: ScalarQuantizer.cpp
hnswlib/: hnswalg.back  hnswalg.h  hnswlib.h
index/: BKT.h  IndexGraph.h  IndexIVF.h
python/: graphood.cpp  graphood.cpp.bak
utils/: dist_func.h  dist_header.h  utils.h
